# ms-graph-api

./: .gitignore  CHANGELOG.md  README.md  ms-graph-api.cabal  stack.yaml
.github/workflows/: haskell.yml
ms-auth/: CHANGELOG.md  README.md  ms-auth.cabal  stack.yaml
ms-auth/src/: DotEnv.hs  MSAuth.hs
ms-auth/src/Network/OAuth/OAuth2/: Internal.hs
ms-auth/src/Network/OAuth2/: JWT.hs  Session.hs
ms-auth/src/Network/OAuth2/Internal/: Pkce.hs  Types.hs  Utils.hs
ms-auth/src/Network/OAuth2/Provider/: AzureAD.hs
ms-auth/src/Network/OAuth2/Provider/AzureAD/: SAS.hs  SharedKey.hs
ms-azure-api/: CHANGELOG.md  README.md  ms-azure-api.cabal  stack.yaml
ms-azure-api-test/: ms-azure-api-test.cabal  stack.yaml
ms-azure-api-test/app/: Main.hs
ms-azure-api/src/: MSAzureAPI.hs  Xmlbf.hs
ms-azure-api/src/MSAzureAPI/: BotService.hs  CostManagement.hs  ServiceBus.hs  StorageServices.hs
ms-azure-api/src/MSAzureAPI/Internal/: Common.hs
ms-azure-api/src/MSAzureAPI/MachineLearning/: Compute.hs  Jobs.hs  OnlineEndpoints.hs  Usages.hs
ms-azure-api/src/MSAzureAPI/StorageServices/: FileService.hs
ms-azure-api/src/Xmlbf/: Xeno.hs
ms-graph-api/: CHANGELOG.md  README.md  ms-graph-api.cabal  stack.yaml
ms-graph-api-test/: CHANGELOG.md  README.md  makefile  ms-graph-api-test.cabal  stack.yaml
ms-graph-api-test/app/: Main.hs
ms-graph-api/src/: MSGraphAPI.hs
ms-graph-api/src/MSGraphAPI/: Auth.hs  Drive.hs  User.hs
ms-graph-api/src/MSGraphAPI/ChangeNotifications/: Subscription.hs
ms-graph-api/src/MSGraphAPI/Files/: Drive.hs  DriveItem.hs
ms-graph-api/src/MSGraphAPI/Internal/: Common.hs
ms-graph-api/src/MSGraphAPI/Users/: Group.hs  User.hs
src/MSGraphAPI/: User.hs
src/MSGraphAPI/Files/: DriveItem.hs  DriveItems.hs
src/MSGraphAPI/Internal/: Common.hs
src/MSGraphAPI/Users/: Group.hs
src/Network/OAuth2/: JWT.hs  Session.hs
src/Network/OAuth2/Provider/: AzureAD.hs
