name:                ms-graph-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unfoldml/ms-graph-api
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          oss@unfoldml.com
copyright:           2023 Marco Zocca
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 9.2.7

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     MSGraphAPI.Auth
                       Network.OAuth2.Provider.AzureAD
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , hoauth2
                     , http-conduit
                     , http-types
                     , req
                     , scotty
                     , text
                     , transformers >= 0.5
                     , uri-bytestring
                     , wai
                     , warp
  ghc-options:         -Wall
                       -Wcompat


-- test-suite spec
--   default-language:    Haskell2010
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   other-modules:       LibSpec
--   build-depends:       base
--                      , ms-graph-api
--                      , hspec
--                      , QuickCheck
--   ghc-options:         -Wall
--                        -Wcompat
--                        -Widentities
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wmissing-export-lists
--                        -Wmissing-home-modules
--                        -Wpartial-fields
--                        -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/unfoldml/ms-graph-api
