name:                ms-auth
version:             0.5.0.0
synopsis:            Microsoft Authentication API
description:         Bindings to the Microsoft Identity API / Active Directory (AD) for building applications that use either Authorization Code (User-facing) or (App-only) authorization flows. Helper functions are provided for building OAuth2 authentication flows and keep tokens transactionally secure and up to date.
homepage:            https://github.com/unfoldml/ms-graph-api
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          oss@unfoldml.com
copyright:           2023 Marco Zocca, UnfoldML
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 9.2.8

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     MSAuth
                       Network.OAuth2.Provider.AzureAD

  other-modules:       Network.OAuth2.Provider.AzureAD.SharedKey
                       Network.OAuth.OAuth2
                       Network.OAuth.OAuth2.AuthorizationRequest
                       Network.OAuth.OAuth2.HttpClient
                       Network.OAuth.OAuth2.Internal
                       Network.OAuth.OAuth2.TokenRequest
                       Network.OAuth2.Internal.Pkce
                       Network.OAuth2.Internal.Types
                       Network.OAuth2.Internal.Utils
                       Network.OAuth2.JWT
                       Network.OAuth2.Session
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , binary >= 0.8
                     , base64
                     , bytestring
                     , conduit >= 1.3
                     , containers
                     , cryptohash-sha256
                     , directory
                     , directory >= 1.3.6.2
                     , dotenv-micro >= 0.1
                     , entropy
                     , exceptions >= 0.10
                     , http-client
                     , http-conduit >= 2.3
                     , http-types
                     , jwt
                     , microlens >= 0.4
                     , modern-uri
                     , req
                     , scientific
                     , scotty
                     , text
                     , time
                     , transformers
                     , unliftio
                     , uri-bytestring
                     , uri-bytestring-aeson >= 0.1
                     , validation-micro
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/unfoldml/ms-graph-api
