name:                ms-azure-api-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unfoldml/ms-graph-api
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat

executable ms-azure-api-test
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aeson
                     , aeson-pretty
                     , base
                     , bytestring
                     , directory >= 1.3.6.2
                     , dotenv-micro == 0.1.0.1
                     , hoauth2 == 2.6.0
                     , http-client
                     , http-client-tls >= 0.3
                     , http-types
                     , ms-azure-api-test
                     , ms-auth
                     , ms-azure-api
                     , req
                     , scotty
                     , text >= 1.2.5.0
                     , transformers >= 0.5.6.2
                     , unliftio
                     , uri-bytestring
                     , wai-extra >= 3.1.13.0
  ghc-options:         -Wall
                       -Wcompat
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N



source-repository head
  type:     git
  location: https://github.com/unfoldml/ms-azure-api
