name:                ms-azure-api
version:             0.7.0.0
synopsis:            Microsoft Azure API
description:         Bindings to the Microsoft Azure API
homepage:            https://github.com/unfoldml/ms-graph-api
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          oss@unfoldml.com
copyright:           2023 Marco Zocca
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 9.2.8

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     MSAzureAPI
                       MSAzureAPI.BotService
                       MSAzureAPI.MachineLearning.Compute
                       MSAzureAPI.MachineLearning.Jobs
                       MSAzureAPI.MachineLearning.OnlineEndpoints
                       MSAzureAPI.MachineLearning.Usages
                       MSAzureAPI.ServiceBus
                       MSAzureAPI.StorageServices
                       MSAzureAPI.StorageServices.FileService
  other-modules:       MSAzureAPI.Internal.Common
                       Xmlbf
                       Xmlbf.Xeno
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , containers
                     , deepseq
                     , exceptions >= 0.10.4
                     , html-entities >= 1.1
                     , http-client
                     , http-client-tls >= 0.3.6.1
                     , http-types
                     , modern-uri
                     , ms-auth >= 0.5
                     , req
                     , scientific
                     , selective
                     , text
                     , time >= 1.8
                     , transformers >= 0.5
                     , unliftio
                     , unordered-containers >= 0.2
                     , xeno
  ghc-options:         -Wall
                       -Wcompat
                       -Wno-unused-imports
  default-extensions:  OverloadedStrings
                       DeriveGeneric
                       DeriveFunctor
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       DataKinds


source-repository head
  type:     git
  location: https://github.com/unfoldml/ms-graph-api
