name:                ms-graph-api-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unfoldml/ms-graph-api
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          oss@unfoldml.com
copyright:           2023 Marco Zocca
category:            API
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 9.2.7

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3.6.2
                     , ms-auth >= 0.5
                     , ms-graph-api

  ghc-options:         -Wall

executable ms-graph-api-test
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aeson
                     , aeson-pretty
                     , base
                     , bytestring
                     , directory
                     , dotenv-micro == 0.1.0.1
                     , http-client
                     , http-client-tls >= 0.3
                     , ms-auth
                     , ms-graph-api >= 0.12
                     , ms-graph-api-test
                     , req
                     , scotty
                     , text >= 1.2.5.0
                     , transformers >= 0.5
                     , unliftio
                     , uri-bytestring
                     , wai-extra
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N



source-repository head
  type:     git
  location: https://github.com/unfoldml/ms-graph-api
